# TCC_backend

./: .gitignore  GEMINI.md  db.sqlite3  doc.txt  dump.rdb  lack_todo.py  manage.py  pyproject.toml  pyrightconfig.json  requirements.txt  test_accounts_endpoints.sh
.github/workflows/: main_ci.yml
accounts/: adapter.py  admin.py  apps.py  email_utils.py  forms.py  handlers.py  managers.py  models.py  permissions.py  repositories.py  serializers.py  services.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_user_is_admin.py  0002_user_is_verified_user_verification_token.py  0003_user_bio.py  0003_user_is_staff_user_temp_field.py  0004_remove_user_first_name_remove_user_last_name_and_more.py  0004_remove_user_temp_field.py  0005_remove_user_is_staff_user_has_paid_plan_and_more.py  0005_user_role.py
core/: asgi.py  decorators.py  hosts.py  middleware.py  qr_codes.py  settings.py  urls.py  wsgi.py
domain/accounts/: entities.py  factories.py  repositories.py  services.py
domain/accounts/aggregates/: account.py
domain/accounts/events/: email_verified.py  password_changed.py  user_registered.py
domain/accounts/exceptions/: auth_exceptions.py
domain/accounts/factories/: account_factory.py
domain/accounts/repositories/: account_repository.py
domain/events/: dispatcher.py
orders/: models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
orders/migrations/: 0001_initial.py  0002_order_table.py
restaurants/: admin.py  models.py  permissions.py  serializers.py  services.py  tests.py  urls.py  views.py
restaurants/domain/: services.py
restaurants/migrations/: 0001_initial.py  0002_alter_restaurant_name.py  0003_menuitem.py  0004_add_review_and_item_details.py  0005_inventoryitem.py  0006_stockitem.py  0007_alter_menuitem_allergens_alter_menuitem_ingredients.py  0008_alter_menuitem_allergens_alter_menuitem_ingredients.py  0009_convert_ingredients_allergens_to_json.py  0010_menuitem_cover_menuitemmedia.py  0011_alter_menuitemmedia_media_type.py
scripts/: set_admin.py
tables/: models.py  serializers.py  tests.py  urls.py  views.py
tables/migrations/: 0001_initial.py  0002_table_qr_code_url.py
tests/: test_e2e_api.py
tests/accounts/: test_auth_flows.py  test_google_login.py  test_models.py  test_rate_limit.py  test_views.py  tests_auth_service.py
tests/core/: test_urls.py
tests/restaurants/: test_inventory_views.py  test_qr_code.py  test_views.py
tests/users/: test_views.py
tests/web/: test_pagination.py
users/: urls.py  views.py
web/: forms.py  table_qr_code.html  urls.py  views.py
(+38 files in other folders)
