[project]
name = "tcc-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.3",
    "django-cors-headers>=4.7.0",
    "django-extensions>=4.1",
    "djangorestframework>=3.16.0",
    "djangorestframework-simplejwt>=5.5.0",
    "email-validator>=2.2.0",
    "psycopg2>=2.9.10",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "tzdata>=2025.2",
]
